--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
 script:
   - python3 setup.py -q install
   - python3 setup.py sdist bdist_wheel 
-  - python3 tests/test_hello.py
+  - python3 tests/test_scielorequest.py
